src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>Algorithm</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Banking Software</fullName>
                </value>
                <value>
                    <fullName>Broker Solutions</fullName>
                </value>
                <value>
                    <fullName>Capital and Credit</fullName>
                </value>
                <value>
                    <fullName>Clearing</fullName>
                </value>
                <value>
                    <fullName>Collateral Management</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Crypto</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Fintech</fullName>
                </value>
                <value>
                    <fullName>IT Provider</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Liquidity Solutions</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Reg Tech</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>SIMM</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Software Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Trade Reporting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Populate_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to copy the Shipping Address to the Billing Address</inlineHelpText>
        <label>Populate Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Current_Products__c</fullName>
        <label>WP0 Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Subsidiary__c</fullName>
        <label>Previous Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_12_Mo_Rollup__c</fullName>
        <inlineHelpText>Total platform clicks for this account between 366-730 days ago (does not include Excel, SNF, API)</inlineHelpText>
        <label>Prior 12 Mo. Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion GS News: Europe</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Mass Reach (1): Proactive</fullName>
                </value>
                <value>
                    <fullName>Mass Reach (1): Reactive</fullName>
                </value>
                <value>
                    <fullName>CRE Trade (2): Proactive</fullName>
                </value>
                <value>
                    <fullName>CRE Trade (2): Reactive</fullName>
                </value>
                <value>
                    <fullName>Europe (2): Reactive</fullName>
                </value>
                <value>
                    <fullName>U.S. Regional (3)</fullName>
                </value>
                <value>
                    <fullName>FInancial Investing (4)</fullName>
                </value>
                <value>
                    <fullName>Not Serviceable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA REIT</fullName>
                </value>
                <value>
                    <fullName>NA REA</fullName>
                </value>
                <value>
                    <fullName>EU REA</fullName>
                </value>
                <value>
                    <fullName>EU REIT</fullName>
                </value>
                <value>
                    <fullName>ATLAS</fullName>
                    <isActive>false</isActive>
                    <label>ATLAS</label>
                </value>
                <value>
                    <fullName>NA Credit</fullName>
                    <isActive>false</isActive>
                    <label>NA Credit</label>
                </value>
                <value>
                    <fullName>REA</fullName>
                    <isActive>false</isActive>
                    <label>REA</label>
                </value>
                <value>
                    <fullName>REIT</fullName>
                    <isActive>false</isActive>
                    <label>REIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Include__c</fullName>
        <label>Products Include</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Research &amp; News</fullName>
                </value>
                <value>
                    <fullName>Research Only</fullName>
                </value>
                <value>
                    <fullName>News Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Category__c</fullName>
        <inlineHelpText>This field is used for &quot;Pre-opportunity&quot; prospecting</inlineHelpText>
        <label>Prospect Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Re-visit Timing</fullName>
                    <label>Revisit Timing</label>
                </value>
                <value>
                    <fullName>Not Viable Now</fullName>
                    <label>Not Viable</label>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Notes__c</fullName>
        <label>Prospect Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protected_By_Age__c</fullName>
        <formula>FLOOR( Now() - Protected_By_Last_Change__c )</formula>
        <inlineHelpText>Calculates the Date/Time Today - Protected By Last Change in Days</inlineHelpText>
        <label>Protected By Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protected_By_Last_Change__c</fullName>
        <inlineHelpText>Captures the timestamp when Protected By Last Change field is updated</inlineHelpText>
        <label>Protected By Last Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Protected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Protected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Protected_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publicly_Traded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Traded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quickfill_ID__c</fullName>
        <externalId>true</externalId>
        <label>Quickfill ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REIT_Data_L60D_Usage__c</fullName>
        <inlineHelpText>REIT Data platform clicks for this account over the last 60 days</inlineHelpText>
        <label>REIT Data L60D Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RR_Max_Month__c</fullName>
        <formula>CASE(MONTH( RR_Monthly_Max__c  ),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;,
4, &quot;04&quot;,
5, &quot;05&quot;,
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RR Max Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Monthly_Max__c</fullName>
        <label>RR Monthly Max</label>
        <summarizedField>Recurring_Revenue_Snapshot__c.Date__c</summarizedField>
        <summaryForeignKey>Recurring_Revenue_Snapshot__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Re_visit_Date__c</fullName>
        <inlineHelpText>This field must be entered when “Revisit Timing” is selected.</inlineHelpText>
        <label>Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>React_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS News: Europe Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>React_Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Construction Firm</fullName>
                </value>
                <value>
                    <fullName>Debt Fund</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Institutional Investor</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Interior Design</fullName>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PE Fund</fullName>
                </value>
                <value>
                    <fullName>PR Firm</fullName>
                </value>
                <value>
                    <fullName>Private Investor</fullName>
                </value>
                <value>
                    <fullName>Property Management</fullName>
                </value>
                <value>
                    <fullName>Proptech</fullName>
                </value>
                <value>
                    <fullName>Recruiter</fullName>
                </value>
                <value>
                    <fullName>REIT/Listed Company</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Workspace Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_id__c</fullName>
        <description>field used to identify what integration this record was included in,</description>
        <externalId>true</externalId>
        <label>Acquisition id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                    <isActive>false</isActive>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                    <isActive>false</isActive>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                    <isActive>false</isActive>
                    <label>Asia Pacific</label>
                </value>
                <value>
                    <fullName>Australia/NZ</fullName>
                    <isActive>false</isActive>
                    <label>Australia/NZ</label>
                </value>
                <value>
                    <fullName>Central_&amp;_SAmerica</fullName>
                    <isActive>false</isActive>
                    <label>Central &amp; S. America</label>
                </value>
                <value>
                    <fullName>China</fullName>
                    <isActive>false</isActive>
                    <label>China</label>
                </value>
                <value>
                    <fullName>E. Europe</fullName>
                    <isActive>false</isActive>
                    <label>E. Europe</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <isActive>false</isActive>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>India</fullName>
                    <isActive>false</isActive>
                    <label>India</label>
                </value>
                <value>
                    <fullName>N. America</fullName>
                    <isActive>false</isActive>
                    <label>N. America</label>
                </value>
                <value>
                    <fullName>South America</fullName>
                    <isActive>false</isActive>
                    <label>South America</label>
                </value>
                <value>
                    <fullName>UK</fullName>
                    <isActive>false</isActive>
                    <label>UK</label>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                    <isActive>false</isActive>
                    <label>Unclassified</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>W. Europe</fullName>
                    <isActive>false</isActive>
                    <label>W. Europe</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>CASE(MONTH(  Last_Renewal_Opp__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;&quot;)</formula>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Usage_L60D__c</fullName>
        <inlineHelpText>Research email and platform clicks for this account over the last 60 days</inlineHelpText>
        <label>Research Usage L60D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrict_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAM_Amount__c</fullName>
        <label>SAM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Active_Account__c</fullName>
        <description>If Account has an activity logged within the last 30 days, this field will return a value of 1.</description>
        <formula>IF( TODAY () - LastActivityDate &lt;= 30, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Domain__c</fullName>
        <description>This field is used for syncing Account records with SalesLoft. A &apos;domain&apos; value is a required in a URL format in order for Account records to sync with SalesLoft.</description>
        <formula>IF((CONTAINS(Website,&quot;.&quot;)&amp;&amp;(NOT(CONTAINS(Website,&quot; &quot;))))
,Website+&apos;?&apos;+CASESAFEID(Id),CASESAFEID(Id)+&apos;.com&apos;)</formula>
        <inlineHelpText>This field is used for syncing Account records with SalesLoft.</inlineHelpText>
        <label>SalesLoft Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Name__c</fullName>
        <label>Secondary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Score__c</fullName>
        <formula>IF (LEN( ShippingStreet ) = 0, 0,1)+
IF (LEN( ShippingCity ) = 0, 0,1)+
IF (LEN( ShippingState) = 0, 0,1)+
IF (LEN( ShippingPostalCode) = 0, 0,1)+
IF (LEN( ShippingCountry) = 0, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snowflake_Account_Locators__c</fullName>
        <label>Snowflake Account Locator(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snowflake_Organization_Name__c</fullName>
        <label>Snowflake Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snowflake_Reader_Account_Email__c</fullName>
        <label>Snowflake Reader Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Action_Items__c</fullName>
        <label>US Strategic Account Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Co_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Co-Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Segment__c</fullName>
        <label>Strategic Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Hedge Funds</fullName>
                </value>
                <value>
                    <fullName>IB (Large)</fullName>
                </value>
                <value>
                    <fullName>IB (Small)</fullName>
                </value>
                <value>
                    <fullName>IPO Prospect</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Non-Coverage</fullName>
                </value>
                <value>
                    <fullName>NTR</fullName>
                </value>
                <value>
                    <fullName>PE (Large)</fullName>
                </value>
                <value>
                    <fullName>PE (Strategic)</fullName>
                </value>
                <value>
                    <fullName>REOC</fullName>
                </value>
                <value>
                    <fullName>Socal</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Non-Strategic</fullName>
                    <isActive>false</isActive>
                    <label>Non-Strategic</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary_Change_Status__c</fullName>
        <label>Subsidiary Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary_Internal_Id__c</fullName>
        <formula>CASE(Subsidiary__c ,
&quot;10 GSA LLC&quot;,8,
&quot;13 GSA UK Ltd&quot;,10,
&quot;14 React Ltd&quot;,29,
&quot;18.1 LDC&quot;,48,
&quot;18.2 On-Site Research Limited&quot;,51,
&quot;18.3 Edge Analytics Ltd&quot;,52,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsidiary Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 GSA LLC</fullName>
                </value>
                <value>
                    <fullName>13 GSA UK Ltd</fullName>
                </value>
                <value>
                    <fullName>18.1 LDC</fullName>
                    <label>18.1 Green Street Solutions (UK) LTD</label>
                </value>
                <value>
                    <fullName>18.2 On-site Research Limited</fullName>
                </value>
                <value>
                    <fullName>18.3 Edge Analytics Ltd</fullName>
                </value>
                <value>
                    <fullName>21 GSA Canada Ltd</fullName>
                </value>
                <value>
                    <fullName>22.1 Locatus</fullName>
                </value>
                <value>
                    <fullName>22.3 Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Netsuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to denote if a record is updated in salesforce and required to be synced with NS.</description>
        <label>Sync to Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <inlineHelpText>Signifies whether the account has been synced to NetSuite</inlineHelpText>
        <label>Synced?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Relationship__c</fullName>
        <formula>NOT(ISBLANK(TA_Vertical__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Vertical__c</fullName>
        <label>TA Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PortCo</fullName>
                </value>
                <value>
                    <fullName>BOD</fullName>
                </value>
                <value>
                    <fullName>Rapport: High</fullName>
                </value>
                <value>
                    <fullName>Rapport: Medium</fullName>
                </value>
                <value>
                    <fullName>Rapport: Low</fullName>
                </value>
                <value>
                    <fullName>Rapport: None</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTM_Rollup__c</fullName>
        <inlineHelpText>Total platform clicks for this account over the last 365 days (does not include Excel, SNF, API)</inlineHelpText>
        <label>TTM Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Description__c</fullName>
        <label>Tax Exempt Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Status__c</fullName>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <description>Currently we have Tax Exempt for the US, but in future may add options for things like EU reverse charge.</description>
        <inlineHelpText>If the account has a specific tax status then please select it here</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_40__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this client considered to be Top 40? This is for CAM&apos;s relationship with Advisory</description>
        <label>Top 40</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_ARR__c</fullName>
        <label>Total ARR</label>
        <summarizedField>Recurring_Revenue_Snapshot__c.ARR__c</summarizedField>
        <summaryFilterItems>
            <field>Recurring_Revenue_Snapshot__c.Date__c</field>
            <operation>equals</operation>
            <value>8/1/2023</value>
        </summaryFilterItems>
        <summaryForeignKey>Recurring_Revenue_Snapshot__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Products__c</fullName>
        <label>Total Products</label>
        <summaryForeignKey>Account_Product_Line__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transition_Lost_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Lost Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Real_time_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this checkbox to true will initiate sync to Netsuite</description>
        <label>Trigger Real-time Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_Advisory_Last_Interaction_Date__c</fullName>
        <label>UK Advisory Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UK_Co_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UK Co-Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UK_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UK Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UK_Strategic_Account_Action_Items__c</fullName>
        <label>UK Strategic Account Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>